--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -35,6 +35,12 @@
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
            <widget class="QPushButton" name="loadImageButton">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
             <property name="text">
              <string>Load</string>
             </property>
@@ -66,7 +72,7 @@
             </property>
             <property name="sizeHint" stdset="0">
              <size>
-              <width>200</width>
+              <width>350</width>
               <height>20</height>
              </size>
             </property>
@@ -76,6 +82,19 @@
            <widget class="QPushButton" name="clearScreenButton">
             <property name="text">
              <string>Clear</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QPushButton" name="segmentButton">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Segment</string>
             </property>
            </widget>
           </item>
